--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>Dizzywyg Test Page</title>
+	<link type="text/css" rel="stylesheet" media="screen" href="css/dizzy_editor.css"></link>
 	<script src="lib/prototype.js" type="text/javascript"></script>
 	<script src="lib/effects.js" type="text/javascript"></script>
 	<script src="lib/controls.js" type="text/javascript"></script>
@@ -14,10 +15,11 @@
 </head>
 
 <body>
-  <div class="dialog">
+  <div>
     <h1>The Dizzywyg is upon us.</h1>
     <p>You may or may not have known.</p>
-		<textarea class="dizzywyg">I love cats</textarea>
+
+		<textarea class="dizzywyg">Fesdfsdfsdf</textarea>
   </div>
 </body>
 </html>
