toolbar checks state and enables buttons, added DizzyElement class which is for defining

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div>
+  <div style="width:600px;">
     <h1>The Dizzywyg is upon us.</h1>
     <p>You may or may not have known.</p>
 
