--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>The Dizzywyg is upon us.</h1>
     <p>You may or may not have known.</p>
 
-		<textarea class="dizzywyg">Fesdfsdfsdf</textarea>
+		<textarea class="dizzywyg">Hi Buttheads</textarea>
   </div>
 </body>
 </html>
