--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>Dizzywyg Test Page</title>
+	<link type="text/css" rel="stylesheet" media="screen" href="css/main.css"></link>
 	<link type="text/css" rel="stylesheet" media="screen" href="css/dizzy_editor.css"></link>
 	<script src="lib/prototype.js" type="text/javascript"></script>
 	<script src="lib/effects.js" type="text/javascript"></script>
